add Settings activity

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="activity_margin">16dp</dimen>
     <dimen name="social_padding">8dp</dimen>
     <dimen name="social_logo">40dp</dimen>
+    <dimen name="settings_padding">8dp</dimen>
 </resources>
