--- a/app/src/main/res/layout/app_launcher_item.xml
+++ b/app/src/main/res/layout/app_launcher_item.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/launcher_padding">
+    android:paddingBottom="@dimen/launcher_padding_large"
+    android:paddingLeft="@dimen/launcher_padding_small"
+    android:paddingRight="@dimen/launcher_padding_small"
+    android:paddingTop="@dimen/launcher_padding_large">
 
     <ImageView
         android:id="@+id/launcher_icon"
