add some margin above the launchers label

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="social_padding">8dp</dimen>
     <dimen name="social_logo">40dp</dimen>
     <dimen name="settings_padding">8dp</dimen>
+    <dimen name="launcher_padding_smallest">2dp</dimen>
     <dimen name="launcher_padding_small">4dp</dimen>
     <dimen name="launcher_padding_large">8dp</dimen>
     <dimen name="icon_size">60dp</dimen>
