--- a/app/src/main/res/layout/app_launcher_dialog_item.xml
+++ b/app/src/main/res/layout/app_launcher_dialog_item.xml
@@ -18,6 +18,7 @@
 
     <TextView
         android:id="@+id/launcher_label"
+        android:layout_marginTop="@dimen/launcher_padding_smallest"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal|top"
