--- a/app/src/main/res/layout/app_launcher_dialog_item.xml
+++ b/app/src/main/res/layout/app_launcher_dialog_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/launcher_holder"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/launcher_padding_small"
     android:paddingLeft="@dimen/launcher_padding_small"
     android:paddingRight="@dimen/launcher_padding_small"
@@ -12,16 +11,25 @@
 
     <ImageView
         android:id="@+id/launcher_icon"
-        android:layout_width="@dimen/icon_size_smaller"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/icon_size_smaller"
         android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/launcher_label"
-        android:layout_marginTop="@dimen/launcher_padding_smallest"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/launcher_icon"
+        android:layout_marginTop="@dimen/launcher_padding_smallest"
         android:gravity="center_horizontal|top"
         android:textSize="@dimen/font_size_smaller"/>
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top|right"
+        android:scaleType="fitEnd"
+        android:src="@mipmap/check"
+        android:visibility="gone"/>
+
+</RelativeLayout>
