add Gson license

--- a/app/src/main/res/layout/activity_license.xml
+++ b/app/src/main/res/layout/activity_license.xml
@@ -32,5 +32,19 @@
             android:layout_height="wrap_content"
             android:text="@string/kotlin_text"/>
 
+        <TextView
+            android:id="@+id/license_gson_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/activity_margin"
+            android:text="@string/gson_title"
+            android:textColor="@color/colorPrimary"/>
+
+        <TextView
+            android:id="@+id/license_gson_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/gson_text"/>
+
     </LinearLayout>
 </ScrollView>
