hide checks as invisible, not gone

--- a/app/src/main/res/layout/app_launcher_dialog_item.xml
+++ b/app/src/main/res/layout/app_launcher_dialog_item.xml
@@ -31,6 +31,6 @@
         android:gravity="top|right"
         android:scaleType="fitEnd"
         android:src="@mipmap/check"
-        android:visibility="gone"/>
+        android:visibility="invisible"/>
 
 </RelativeLayout>
