--- a/app/src/main/res/layout/app_launcher_item.xml
+++ b/app/src/main/res/layout/app_launcher_item.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
     android:paddingBottom="@dimen/launcher_padding_small"
     android:paddingLeft="@dimen/launcher_padding_small"
     android:paddingRight="@dimen/launcher_padding_small"
