--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,6 @@
     <dimen name="icon_size">60dp</dimen>
     <dimen name="icon_size_smaller">50dp</dimen>
 
-    <dimen name="font_size">12sp</dimen>
+    <dimen name="normal_text_size">14sp</dimen>
     <dimen name="font_size_smaller">11sp</dimen>
 </resources>
