--- a/app/src/main/res/layout/edit_launcher.xml
+++ b/app/src/main/res/layout/edit_launcher.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:id="@+id/edit_launcher_holder"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/edit_launcher_holder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/activity_margin">
 
-    <EditText
+    <com.simplemobiletools.commons.views.MyEditText
         android:id="@+id/edit_launcher_edittext"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:inputType="textCapWords"/>
+        android:inputType="textCapWords"
+        android:textCursorDrawable="@null"/>
 
 </FrameLayout>
