--- a/app/src/main/res/layout/app_launcher_item.xml
+++ b/app/src/main/res/layout/app_launcher_item.xml
@@ -5,10 +5,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
-    android:paddingBottom="@dimen/launcher_padding_small"
-    android:paddingLeft="@dimen/launcher_padding_small"
-    android:paddingRight="@dimen/launcher_padding_small"
-    android:paddingTop="@dimen/launcher_padding_large">
+    android:paddingBottom="@dimen/small_margin"
+    android:paddingLeft="@dimen/small_margin"
+    android:paddingRight="@dimen/small_margin"
+    android:paddingTop="@dimen/medium_margin">
 
     <ImageView
         android:id="@+id/launcher_icon"
@@ -21,9 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/launcher_icon"
-        android:layout_marginTop="@dimen/launcher_padding_smallest"
+        android:layout_marginTop="@dimen/tiny_margin"
         android:gravity="center_horizontal|top"
-        android:textSize="@dimen/font_size_smaller"/>
+        android:textSize="@dimen/smaller_text_size"/>
 
     <ImageView
         android:id="@+id/launcher_check"
