--- a/app/src/main/res/layout/dialog_pick_launchers.xml
+++ b/app/src/main/res/layout/dialog_pick_launchers.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/launchers_holder"
+    android:id="@+id/pick_launchers_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
