rewrite RecyclerAdapter to the shared recyclerview adapter

--- a/app/src/main/res/layout/app_launcher_item.xml
+++ b/app/src/main/res/layout/app_launcher_item.xml
@@ -5,6 +5,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
     android:paddingBottom="@dimen/small_margin"
     android:paddingLeft="@dimen/small_margin"
     android:paddingRight="@dimen/small_margin"
@@ -32,6 +34,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_margin="@dimen/small_margin"
         android:background="@drawable/circle_background"
         android:padding="@dimen/tiny_margin"
         android:src="@drawable/ic_check"
