--- a/app/src/main/res/layout/dialog_pick_launchers.xml
+++ b/app/src/main/res/layout/dialog_pick_launchers.xml
@@ -6,5 +6,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbars="vertical"
-    app:layoutManager="android.support.v7.widget.GridLayoutManager"
+    app:layoutManager="com.simplemobiletools.commons.views.MyGridLayoutManager"
     app:spanCount="@integer/columns"/>
