--- a/app/src/main/res/layout/item_app_launcher.xml
+++ b/app/src/main/res/layout/item_app_launcher.xml
@@ -38,6 +38,6 @@
         android:background="@drawable/circle_background"
         android:padding="@dimen/tiny_margin"
         android:src="@drawable/ic_check"
-        android:visibility="gone"/>
+        android:visibility="invisible"/>
 
 </RelativeLayout>
