--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,9 +27,7 @@
             android:layout_height="match_parent"
             android:layout_alignBottom="@+id/launchers_grid"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/launchers_grid"
-            android:paddingLeft="@dimen/normal_margin"
             android:paddingStart="@dimen/normal_margin">
 
             <include layout="@layout/fastscroller_handle_vertical"/>
@@ -43,6 +41,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/activity_margin"
-        android:src="@drawable/ic_plus"/>
+        android:src="@drawable/ic_plus_vector"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
