--- a/app/src/main/res/layout/item_app_launcher.xml
+++ b/app/src/main/res/layout/item_app_launcher.xml
@@ -7,10 +7,10 @@
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:paddingBottom="@dimen/small_margin"
     android:paddingLeft="@dimen/small_margin"
+    android:paddingTop="@dimen/medium_margin"
     android:paddingRight="@dimen/small_margin"
-    android:paddingTop="@dimen/medium_margin">
+    android:paddingBottom="@dimen/small_margin">
 
     <ImageView
         android:id="@+id/launcher_icon"
