--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
@@ -16,21 +15,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            android:paddingBottom="@dimen/activity_margin"
             android:paddingTop="@dimen/activity_margin"
+            android:paddingBottom="@dimen/activity_margin"
             app:layoutManager="com.simplemobiletools.commons.views.MyGridLayoutManager"
-            app:spanCount="@integer/columns"/>
+            app:spanCount="@integer/column_count" />
 
         <com.simplemobiletools.commons.views.FastScroller
             android:id="@+id/launchers_fastscroller"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_alignTop="@+id/launchers_grid"
             android:layout_alignBottom="@+id/launchers_grid"
             android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/launchers_grid"
             android:paddingStart="@dimen/normal_margin">
 
-            <include layout="@layout/fastscroller_handle_vertical"/>
+            <include layout="@layout/fastscroller_handle_vertical" />
 
         </com.simplemobiletools.commons.views.FastScroller>
     </RelativeLayout>
@@ -41,6 +40,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/activity_margin"
-        android:src="@drawable/ic_plus_vector"/>
+        android:src="@drawable/ic_plus_vector" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
