adding a menu item for launching reorder mode

--- a/app/src/main/res/layout/item_app_launcher.xml
+++ b/app/src/main/res/layout/item_app_launcher.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/launcher_holder"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -16,7 +15,7 @@
         android:id="@+id/launcher_icon"
         android:layout_width="match_parent"
         android:layout_height="@dimen/launcher_icon_size"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center" />
 
     <TextView
         android:id="@+id/launcher_label"
@@ -25,19 +24,28 @@
         android:layout_below="@+id/launcher_icon"
         android:layout_marginTop="@dimen/tiny_margin"
         android:gravity="center_horizontal|top"
-        android:textSize="@dimen/smaller_text_size"/>
+        android:textSize="@dimen/smaller_text_size" />
 
     <ImageView
         android:id="@+id/launcher_check"
         android:layout_width="@dimen/selection_check_size"
         android:layout_height="@dimen/selection_check_size"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_margin="@dimen/small_margin"
         android:background="@drawable/circle_background"
         android:padding="@dimen/tiny_margin"
         android:src="@drawable/ic_check_vector"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
+
+    <ImageView
+        android:id="@+id/launcher_drag_handle"
+        android:layout_width="@dimen/drag_handle_size"
+        android:layout_height="@dimen/drag_handle_size"
+        android:layout_below="@+id/launcher_check"
+        android:layout_alignParentEnd="true"
+        android:padding="@dimen/small_margin"
+        android:src="@drawable/ic_drag_handle_vector"
+        android:visibility="gone" />
 
 </RelativeLayout>
