increase the icon spacing

--- a/app/src/main/res/layout/dialog_pick_launchers.xml
+++ b/app/src/main/res/layout/dialog_pick_launchers.xml
@@ -4,7 +4,7 @@
     android:id="@+id/pick_launchers_holder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/small_margin"
+    android:padding="@dimen/medium_margin"
     android:scrollbars="vertical"
     app:layoutManager="com.simplemobiletools.commons.views.MyGridLayoutManager"
     app:spanCount="@integer/column_count" />
